--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "homepage": "https://swaff-y.github.io/hellofresh-frontend",
   "version": "0.1.0",
   "private": true,
+  "engines":{
+    "npm":"7.10.0",
+    "node":"10.0.0"
   "dependencies": {
     "@popperjs/core": "^2.9.2",
     "@testing-library/jest-dom": "^5.11.4",
